prevents stretching of quitfacebook searchbar

--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,7 @@ h2 {
     width: 30px; }
 
   #quitfacebook {
-    height: 30px;
-    width: 557px; } }
+    height: 30px; } }
 .content {
   pointer-events: none; }
 
